# pylint-sqlalchemy2

./: .pylintrc.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: pylint_sqlalchemy2.pth
src/pylint_sqlalchemy2/: __init__.py  cli.py  func_callable.py
