[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylint-sqlalchemy2"
version = "0.2.0"
description = "Pylint plugin for SQLAlchemy 2.x compatibility - fixes false positives for func.count(), func.sum(), etc."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Stefan Gentz", email = "github@stefan-gentz.com" }
]
keywords = ["pylint", "sqlalchemy", "plugin", "linter", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pylint>=3.0",
    "astroid>=3.0",
]

[project.urls]
Homepage = "https://github.com/StefanGentz/pylint-sqlalchemy2"
Repository = "https://github.com/StefanGentz/pylint-sqlalchemy2"
Issues = "https://github.com/StefanGentz/pylint-sqlalchemy2/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pylint_sqlalchemy2"]

[tool.hatch.build.targets.wheel.force-include]
"src/pylint_sqlalchemy2.pth" = "pylint_sqlalchemy2.pth"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
pylint-sqlalchemy2 = "pylint_sqlalchemy2.cli:main"
